# insight3d

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README.txt  insight3d.sln
insight3d/: CMakeLists.txt  Makefile  actions.cpp  actions.h  application.cpp  application.h  core_constants.h  core_debug.cpp  core_debug.h  core_image_loader.cpp  core_image_loader.h  core_math_routines.cpp  core_math_routines.h  core_state.cpp  core_state.h  core_structures.cpp  core_structures.h  cv_extensions.cpp  cv_extensions.h  geometry_export.cpp  geometry_export.h  geometry_loader.cpp  geometry_loader.h  geometry_publish.cpp  geometry_publish.h  geometry_queries.cpp  geometry_queries.h  geometry_routines.cpp  geometry_routines.h  geometry_structures.cpp  geometry_structures.h  geometry_textures.cpp  geometry_textures.h  gui.cpp  gui.h  gui_style.cpp  gui_style.h  interface_filesystem.cpp  interface_filesystem.h  interface_opencv.cpp  (+79 more)
